  - Added focuses to the generic focus tree for the creation of a research facility
  - Skoda/Czech exclusive engine technologies are now increasing Skoda Productivity Growth by 0.01 point
  - Libyan tribes will no longer be able to immediately revolt again once annexed. The revolt can only happen again once the area has been re-cored by Libya

 Database:
  - Added Libya to the Strengthen/Weaken list
  - Distributed starting rocket sites to countries with former buildings
  - Distributed starting Order of Battles (OOBs) including new missile stockpiles
  - Some technologies are now locked behind special projects for more niche sub-class technologies that are not common standard'
  - Removed the air defense system as SAMs are now a missile unit that can be deployed at airbases
  - Removed several redundant buildings and rebranded the "Missile Silo" as a catch-all for missile based assets
  - Distributed starting special facilities to various countries
  - Kurdistan no longer starts with both NSB and non-NSB SP Artillery
  - Reduced Libya's military spending by one level at game start to help with budget
  - Removed most of the airbases in Northern Mali

 Graphics:
  - Custom new scientists portraits to support the new special projects
  - 10 new spy portraits for each culture group (~60 new spy portraits)
  - Custom MD GFX for all raids
  - New GUI look for Special Projects to make it more in-line with MD's timeframe
  - New building models for a variety of building types including Anti-Air (SHORAD in-game), landmarks and more
  - Hundreds of new icons for ground, air, and missiles for the new technology
  - Infantry models overhaulted all around. They are now using an upgraded shader Uniform/skin variation also added to a handful of specific nations
  - New ship and air models (10+ models)
  - New models for missiles and so on during flight while using missiles (12+ new models)
  - Added a variety of effects such as fire to buildings, tracers and more
