@@ -73,6 +73,7 @@ subparty_policies_category = {
 			clear_variable = five_year_plan_land_bunker_factor
 			clear_variable = five_year_plan_ag_districts_factor
 			clear_variable = five_year_plan_resources_factor
+			clear_variable = five_year_plan_nuclear_factor
 		}
 	}
 
@@ -107,6 +108,7 @@ subparty_policies_category = {
 			add_to_variable = { five_year_plan_land_bunker_factor = -0.075 }
 			add_to_variable = { five_year_plan_coastal_bunker_factor = -0.075 }
 			add_to_variable = { five_year_plan_resources_factor = -0.075 }
+			add_to_variable = { five_year_plan_nuclear_factor = -0.075 }
 			custom_effect_tooltip = TT_5_YEAR_PLAN_CIVILIAN_FOCUS
 		}
 	}
@@ -142,6 +144,7 @@ subparty_policies_category = {
 			add_to_variable = { five_year_plan_land_bunker_factor = 0.15 }
 			add_to_variable = { five_year_plan_coastal_bunker_factor = 0.15 }
 			add_to_variable = { five_year_plan_resources_factor = -0.075 }
+			add_to_variable = { five_year_plan_nuclear_factor = -0.075 }
 			custom_effect_tooltip = TT_5_YEAR_PLAN_MILITARY_INFRASTRUCTURE_FOCUS
 		}
 	}
@@ -177,6 +180,7 @@ subparty_policies_category = {
 			add_to_variable = { five_year_plan_land_bunker_factor = -0.075 }
 			add_to_variable = { five_year_plan_coastal_bunker_factor = -0.075 }
 			add_to_variable = { five_year_plan_resources_factor = -0.075 }
+			add_to_variable = { five_year_plan_nuclear_factor = -0.075 }
 			custom_effect_tooltip = TT_5_YEAR_PLAN_MILITARY_PRODUCTION_FOCUS
 		}
 	}
@@ -212,6 +216,7 @@ subparty_policies_category = {
 			add_to_variable = { five_year_plan_land_bunker_factor = -0.075 }
 			add_to_variable = { five_year_plan_coastal_bunker_factor = 0.15 }
 			add_to_variable = { five_year_plan_resources_factor = -0.075 }
+			add_to_variable = { five_year_plan_nuclear_factor = -0.075 }
 			custom_effect_tooltip = TT_5_YEAR_PLAN_NAVAL_EXPANSION_FOCUS
 		}
 	}
@@ -246,7 +251,43 @@ subparty_policies_category = {
 			add_to_variable = { five_year_plan_land_bunker_factor = -0.075 }
 			add_to_variable = { five_year_plan_coastal_bunker_factor = -0.075 }
 			add_to_variable = { five_year_plan_resources_factor = 0.15 }
+			add_to_variable = { five_year_plan_nuclear_factor = -0.075 }
 			custom_effect_tooltip = TT_5_YEAR_PLAN_RESOURCE_EXPLOITATION_FOCUS
+		}
+	}
+
+	generic_focus_on_nuclear_sector = {
+		icon = generic_construction
+
+		visible = {
+			OR = {
+				emerging_communist_state_are_in_power = yes
+				neutrality_neutral_communism_are_in_power = yes
+			}
+			NOT = { has_dynamic_modifier = { modifier = generic_five_year_plan_dynamic_modifier } }
+			NOT = { has_country_flag = five_year_plan_focus_on_nuclear_sector }
+		}
+
+		complete_effect = {
+			set_country_flag = five_year_plan_focus_on_nuclear_sector
+			add_to_variable = { five_year_plan_political_power_factor = -0.05 }
+			add_to_variable = { five_year_plan_infra_factor = 0.15 }
+			add_to_variable = { five_year_plan_air_base_factor = -0.075 }
+			add_to_variable = { five_year_plan_anti_air_factor = -0.075 }
+			add_to_variable = { five_year_plan_fuel_reserve_factor = 0.15 }
+			add_to_variable = { five_year_plan_intelligence_station_factor = -0.075 }
+			add_to_variable = { five_year_plan_mobile_radio_mast_factor = -0.075 }
+			add_to_variable = { five_year_plan_MIC_factor = -0.075 }
+			add_to_variable = { five_year_plan_CIC_factor = -0.075 }
+			add_to_variable = { five_year_plan_office_factor = -0.075 }
+			add_to_variable = { five_year_plan_NIC_factor = -0.075 }
+			add_to_variable = { five_year_plan_refinery_factor = 0.15 }
+			add_to_variable = { five_year_plan_naval_base_factor = -0.075 }
+			add_to_variable = { five_year_plan_land_bunker_factor = -0.075 }
+			add_to_variable = { five_year_plan_coastal_bunker_factor = -0.075 }
+			add_to_variable = { five_year_plan_resources_factor = -0.075 }
+			add_to_variable = { five_year_plan_nuclear_factor = 0.15 }
+			custom_effect_tooltip = TT_5_YEAR_PLAN_NUCLEAR_EXPLOITATION_FOCUS
 		}
 	}
 
