@@ -85,6 +85,7 @@ generic_five_year_plan_dynamic_modifier = {
 	production_speed_coastal_bunker_factor = five_year_plan_coastal_bunker_factor
 	production_speed_agriculture_district_factor = five_year_plan_ag_districts_factor
 	local_resources_factor = five_year_plan_resources_factor
+	production_speed_nuclear_reactor_factor = five_year_plan_nuclear_factor
 }
 
 government_popularity_modifier = {
