@@ -1014,3 +1014,6 @@
 
  SUD_humiliated_army: "Humiliated Army"
  SUD_humiliated_army_desc: "The recent raid by Darfuri rebels at El Fasher has been a major hit military and psychologically to the Sudanese Army. A much smaller group of rebels managed to destroy several aircraft, kill multiple soldiers and capture a major general who was a commander of an air base. It will take time before the army can recover from this."
+
+ # Misc
+ CAT_nuclear_research: "Nuclear Research"
