@@ -824,3 +824,9 @@
 
  ### Nuclear_sharing ###
  add_missile_building_level_tt: "Expands Potential §Y$rocket_site$§! Missile Capacity to [?num_launcher_set_temp_total|0] (Building Level: [?num_launcher_set_temp|0])"
+ # Missiles
+ ballistic_missile_equipment_0: "Early IRBM's"
+ nuclear_missile_equipment_0: "Early ICBM's"
+ nuclear_ballistic_missile_equipment_0: "Early ICBM's"
+ guided_missile_equipment_0: "Early GLCM's"
+ sam_missile_equipment_0: "Early SAM's"
