@@ -83,6 +83,7 @@ v1.11.0
   - Added focuses to the generic focus tree for the creation of a research facility
   - Skoda/Czech exclusive engine technologies are now increasing Skoda Productivity Growth by 0.01 point
   - Libyan tribes will no longer be able to immediately revolt again once annexed. The revolt can only happen again once the area has been re-cored by Libya
+  - Added a decision to expand the nuclear sector in the ideological struggle menu for socialists
 
  Database:
   - Added Libya to the Strengthen/Weaken list
